--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ xcuserdata/
 ### Xcode Patch ###
 *.xcodeproj/*
 #!*.xcodeproj/project.pbxproj
-#!*.xcodeproj/xcshareddata/
+!*.xcodeproj/xcshareddata/
 #!*.xcodeproj/project.xcworkspace/
 #!*.xcworkspace/contents.xcworkspacedata
 /*.gcno
